--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-<div id="quote-box">
-  <div id="text">
-    <i class="fa fa-quote-left" aria-hidden="true"></i>
-    <span id="quote"></span>
-  </div>
-  <div id="author">
-    <span>- </span>
-    <span id="author-name"></span>
-    <span></span>
-  </div>
-  <div class="buttons">
-    <a id="tweet-quote" href="twitter.com/intent/tweet" target="_blank" title="tweetar esse quote"><i class="fab fa-twitter"></i></a>
-    <button onClick="newQuote()" id="new-quote">novo quote</button>
-  </div>
-</div>
-<div id="footer">
-  <a href="https://github.com/adrianwilker">adrianwilker</a>
-</div>
-<script src="https://code.jquery.com/jquery-1.12.3.js" integrity="sha256-1XMpEtA4eKXNNpXcJ1pmMPs8JV+nwLdEqwiJeCQEkyc=" crossorigin="anonymous"></script>
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Random Quote Machine</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  </head>
+  <body>
+    <div id="quote-box">
+      <div id="text">
+        <i class="fa fa-quote-left" aria-hidden="true"></i>
+        <span id="quote"></span>
+      </div>
+      <div id="author">
+        <span>- </span>
+        <span id="author-name"></span>
+        <span></span>
+      </div>
+      <div class="buttons">
+        <a id="tweet-quote" href="twitter.com/intent/tweet" target="_blank" title="tweetar esse quote"><i class="fab fa-twitter"></i></a>
+        <button onClick="newQuote()" id="new-quote">novo quote</button>
+      </div>
+    </div>
+    <div id="footer">
+      <a href="https://github.com/adrianwilker">adrianwilker</a>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.3.js" integrity="sha256-1XMpEtA4eKXNNpXcJ1pmMPs8JV+nwLdEqwiJeCQEkyc=" crossorigin="anonymous"></script>
+  </body>
+</html>
