--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <a href="https://github.com/adrianwilker">adrianwilker</a>
     </div>
     <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.3.js" integrity="sha256-1XMpEtA4eKXNNpXcJ1pmMPs8JV+nwLdEqwiJeCQEkyc=" crossorigin="anonymous"></script>
+    <script src="jquery-1.12.3.js"></script>
   </body>
 </html>
